More work on porting makeAttack

--- a/src/UAFLib/todo.txt
+++ b/src/UAFLib/todo.txt
@@ -1,6 +1,5 @@
 ﻿- Make the status frame on the combat scene!
-- Make a unit test that moves the character on an empty battlefield in a line 5 squares
-- Make a unit test that sets an enemy next to a character and makes an attack
+- Make a unit test that sets an enemy next to a character and makes an attack - check out makeAttack called from COMBATANT.HandleTimeDelayMsgBegin (ew)
 - Figure out how we are going to load resources in Unity.  Make a ResourceLoader interface in UAFLib that a Unity class will implement
 - Make a monster library loader, class library loader, etc.
 - Figure out how to handle their compression algorithm
