Adding more combat including winning and losing

--- a/Assets/Todo.txt
+++ b/Assets/Todo.txt
@@ -1,5 +1,4 @@
-﻿- Monster attack messages are being painted on painted as character statuses
-- Make a pause on every monster move (use coroutine?)
+﻿- Check for winning in dyingcombatant won't work because the victor type is not set yet.  Will ahve to check when startround is called
 - Ranged attacks
 - Dungeon Generation
 - Moving animations on player RigidBody
@@ -8,3 +7,4 @@
 - Move the window with the player smoothly when they get outiside of a certain box in the middle - e.g. x > 306 or x < 118.  Use Lerp.  See code in MainCameraEvents
 - Find a better way to switch between loaders in CombatScreenEvents - including the fact that the return type of Start() has to change depending on which one we use
 - Visit the shop(s?)!!!
+- Fog of war
