--- a/Assets/Todo.txt
+++ b/Assets/Todo.txt
@@ -1,6 +1,9 @@
-﻿- Reduce startup time
-- Probably a crash after returning from Inventory screen
+﻿- Working - Probably a crash after returning from Inventory screen
+- Working - Use the attack icon when player is attacking
+- Working - Player GameObject should be stored at a more global level to save calls to GameObject.Find
+- Reduce startup time - seems like this is mostly the specab loading code
 - Support diagonal moves
+- rename icon_PC_Fighter_Male_# sprite
 - Ranged attacks
 - Dungeon Generation
 - Moving animations on player RigidBody
