--- a/Assets/Todo.txt
+++ b/Assets/Todo.txt
@@ -1,4 +1,4 @@
-﻿- Reduce startup time - seems like this is mostly the specab loading code
+﻿- Reduce startup time - seems like this is mostly the specab loading code - try packaging all .js together into a single file and see if that makes it faster - use timestamps in Unity to measure
 - Support diagonal moves
 - rename icon_PC_Fighter_Male_# sprite
 - Ranged attacks
