"Fixed a bug related to player not being able to move after picking up items from treasure chest.  It was encumberance!"

--- a/Assets/Todo.txt
+++ b/Assets/Todo.txt
@@ -1,6 +1,4 @@
-﻿- Player is stuck after opening treasure chest - probably the playerModelMove(0,0) hack after returning from inventory screen
-- One of the test cases is failing - "value is null"
-- MacOS build does nothing much - try building on a Linux VM
+﻿- MacOS build does nothing much - try building on a Linux VM
 - Reduce startup time - It is mostly happening in the item library - I cut off a second by using the protobuf serialization routine, but a lot of time is being taken in ITEM_DATA_TYPE.LoadFromLoader - try moving itemData into the C# scope and loading it there and returning it to the engine.  Will have to deal with ExpandoObject
 - Possible bug: randomizeAndPlaceMonsters could put two monsters in the same spot - check to see if the mosnterLocations.Get() is already set before using it - Also they can spawn in the same place as the player!
 - Support diagonal moves
