Fixed a crash with bitwise operations and HasDeathImmunity()

--- a/Assets/Todo.txt
+++ b/Assets/Todo.txt
@@ -1,4 +1,5 @@
 ﻿- MacOS build does nothing much - try building on a Linux VM
+- Find a general way to handle bitwise operations in JavaScript on WebGL build so that we don't get the "float unrepresentable in integer range" error
 - Reduce startup time - It is mostly happening in the item library - I cut off a second by using the protobuf serialization routine, but a lot of time is being taken in ITEM_DATA_TYPE.LoadFromLoader - try moving itemData into the C# scope and loading it there and returning it to the engine.  Will have to deal with ExpandoObject
 - Possible bug: randomizeAndPlaceMonsters could put two monsters in the same spot - check to see if the mosnterLocations.Get() is already set before using it - Also they can spawn in the same place as the player!
 - Support diagonal moves
@@ -6,6 +7,7 @@
 - Really need to refactor UserInputEvents and InventorySceneEvents to tie into the CombatMenuHandler/InventoryMenuHandler - having two points of processing for the keystrokes is confusing and really they should mostly be tied together with the one exception of the Movement keys
 - rename icon_PC_Fighter_Male_# sprite
 - Ranged attacks
+- Make enemies drop loot?
 - Dungeon Generation
 - Moving animations on player RigidBody
 - Comment the living hell out of everything
