--- a/src/UAFLib/todo.txt
+++ b/src/UAFLib/todo.txt
@@ -1,7 +1,5 @@
 ﻿- Create routines for bitwise operations for webgl.  Build test cases around it
-- Add clause to TestRangedAttack to make sure that arrows have decreased
-- TEst cases to make sure that thrown axes and such decrease in quantity
-- Changes to make TestRangedAttack.js have caused a few other cases to fail
+- Test cases to make sure that thrown axes and such decrease in quantity
 - implement a simple spell like magic missile
 - Design an API for a wrapper that would simplify the combat rounds.  Then build it.
 - itemID.SpellID() is not supported so SCRIPT_CONTEXT.SetItemContext doesn't really allow the spellContext to be set like it should.  This probably affects items that have spells "attached" to them somehow
