Refactoring out duplicate definition of itemReadiedLocation in Items.js

--- a/src/UAFLib/todo.txt
+++ b/src/UAFLib/todo.txt
@@ -2,11 +2,11 @@
 - Design an API for a wrapper that would simplify the combat rounds.  Then build it.
 - itemID.SpellID() is not supported so SCRIPT_CONTEXT.SetItemContext doesn't really allow the spellContext to be set like it should.  This probably affects items that have spells "attached" to them somehow
 - Test case where there is no line of sight to the target - Combatant.canAttack should fail because Drawtile.HaveVisibility should fail
+- Test cases for ReadyBestShield, ReadyBestArmor, etc
 - Corner test cases:
 	- Ranger damage specialties
 	- Vorpal weapons
 - There are several accessors in ITEM_LIST that do the same thing.  All the calls should be consolidated into one method
-- There is an Items.WeaponHand and an itemReadiedLocation.WeaponHand.  Investigate
 - TestLoadItems is not working because of protobuf problem with NUnit
 - Take off the item != null check in ITEM_LIST.prototype.GetItem and watch the crash in the test cases.  Null should probably not be getting passed in there.  Investigate
 - TestCombatMovementAttack.js - 2 test case for Guarding-CanGuardAttack could be a little better - maybe after the status is set, the UpdateCombat() or HandleTimeDelayMsgBegin() gets called to let the guarder attack
